--- a/src/less/goldenlayout-base.less
+++ b/src/less/goldenlayout-base.less
@@ -378,10 +378,10 @@
 
 // Placeholder Container of target position
 .lm_dropTargetIndicator {
-  display: none;
+  visibility: hidden;
   position: absolute;
   z-index: 30;
-  transition: all 200ms ease;
+  transition: all 200ms ease, visibility 0ms linear;
 
   // Inner Placeholder
   .lm_inner {
